# icr-evaluation-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
icr_evaluation_pipeline/: definitions.py  evaluation.py  jobs.py  partitions.py  preprocessing.py  types.py
icr_evaluation_pipeline/assets/datasets/: datasets.py
icr_evaluation_pipeline/assets/models/: models.py
icr_evaluation_pipeline/assets/rarity/: rarity_scores.py
icr_evaluation_pipeline/assets/results/: combined_results.py  individual_results.py  scorers.py
icr_evaluation_pipeline/resources/: configs.py  custom_mlflow.py
icr_evaluation_pipeline/sensors/: evaluation_finished.py
rf_sampling_experiment/: rf_exp.py
scripts/: delete_all_mlflow_experiments.py  download_artifacts_for_experiment.py  download_rarity_score_histograms.py
